# talsec-playground

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/talsec/t/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/rules/: match_all_apk.yara  metasploit.yara
app/src/main/java/com/talsec/t/: App.java  MainActivity.java  ScreenBlock.java  TalsecApplication.java  Utils.java
app/src/main/java/com/talsec/t/malware/: Scan.java
app/src/main/native/: CMakeLists.txt  signature.cpp  signature.h
app/src/main/native/include/: IModule.h
app/src/test/java/com/talsec/t/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
